objects/EUR_CRM_ObjPromo_OnTrade_Var_Detail__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ObjPromo_OnTrade_Variation__c</fullName>
        <label>O/P Promo Variation</label>
        <referenceTo>EUR_CRM_ObjPromo_OnTrade_Variation__c</referenceTo>
        <relationshipLabel>O/P Promo Variation Details</relationshipLabel>
        <relationshipName>O_P_Promo_Variation_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Quality__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand-Quality (EU)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR 4</booleanFilter>
            <filterItems>
                <field>EUR_CRM_Quality__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>EUR DE Quality</value>
            </filterItems>
            <filterItems>
                <field>EUR_CRM_Quality__c.EUR_CRM_Is_Ancillary_Product_Item__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>DE O/P Promo Variation Detail</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>DE O/P Promo Variation Detail</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipLabel>O/P Promo Variation Details</relationshipLabel>
        <relationshipName>O_P_Promo_Variation_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>O/P Promo Variation Detail (EU)</label>
    <nameField>
        <displayFormat>OPPVD-{0000000000}</displayFormat>
        <label>O/P Promo Variation Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>O/P Promo Variation Details (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_ObjPromo_Promo_Variation_Detail</fullName>
        <active>true</active>
        <label>DE O/P Promo Variation Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>